@@ -1,9 +1,9 @@
 package info.matsumana.armeria.config;
 
+import java.util.List;
+
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-
-import com.google.common.collect.ImmutableList;
 
 import com.linecorp.armeria.server.logging.LoggingService;
 import com.linecorp.armeria.server.thrift.THttpService;
@@ -32,7 +32,7 @@ public class ArmeriaThriftServiceConfig {
                                         .decorate(LoggingService.newDecorator())
                                         .decorate(HttpTracingService.newDecorator(tracing)))
                 .setServiceName("PingService")
-                .setExampleRequests(ImmutableList.of(new PingService.ping_args()));
+                .setExampleRequests(List.of(new PingService.ping_args()));
     }
 
     @Bean
@@ -43,7 +43,7 @@ public class ArmeriaThriftServiceConfig {
                                         .decorate(LoggingService.newDecorator())
                                         .decorate(HttpTracingService.newDecorator(tracing)))
                 .setServiceName("FailService")
-                .setExampleRequests(ImmutableList.of(new FailService.fail_args()));
+                .setExampleRequests(List.of(new FailService.fail_args()));
     }
 
     @Bean
@@ -54,6 +54,6 @@ public class ArmeriaThriftServiceConfig {
                                         .decorate(LoggingService.newDecorator())
                                         .decorate(HttpTracingService.newDecorator(tracing)))
                 .setServiceName("Hello1Service")
-                .setExampleRequests(ImmutableList.of(new Hello1Service.hello_args("foo")));
+                .setExampleRequests(List.of(new Hello1Service.hello_args("foo")));
     }
 }
